fix frontend, still get stuck with "Search" function bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,12 @@ body {
   flex: 60%;
   display: grid;
   place-content: center;
+  text-shadow: 
+    1px 1px 0 #000,
+    -1px 1px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000;
+  color: white;
 }
 
 .post .footer {
